--- a/src/app/bmx/bmx-creator/survey-creation-design/survey-creation-design.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/survey-creation-design.component.html
@@ -271,7 +271,7 @@
 
 </div>
 
-<!-- TEMPLATE BOX SAVE AND UPDATE -->
+<!--  MODAL BOX TO SAVE AND UPDATE TEMPLATES -->
 <div *ngIf="isTemplateBoxOn" class="save-template-box"
     style="display: flex;flex-direction: column;align-items: center;justify-content: space-around;">
     <h2 style="text-align: center;padding-top: 5px;color: #2a3f8a;">{{templateTitle}}</h2>
