--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/image-rank/image-rank.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/image-rank/image-rank.component.html
@@ -259,7 +259,8 @@
 
 
 <!--💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲 TABLE GENERATOR 💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲-->
-<div *ngIf="bmxItem.componentSettings[1].categoryTobeRender == '' || bmxItem.componentSettings[1].categoryTobeRender == bmxItem.componentSettings[0].categoryName "
+<!-- <div *ngIf="bmxItem.componentSettings[1].categoryTobeRender == '' || bmxItem.componentSettings[1].categoryTobeRender == bmxItem.componentSettings[0].categoryName " -->
+<div
     class="desktop">
     <div style="display: flex;flex-direction: column;padding-left: 40px;">
 
@@ -272,7 +273,7 @@
     <div class="scroller-style main-container"
         [dragula]="(dragRows)?'DRAGGABLE_ROW':(rankingType == 'dragAndDrop')?draggableBag:''"
         [(dragulaModel)]="bmxItem.componentText" (dragulaModelChange)="checkDragEvetn($event);">
-        <div *ngFor="let testName of bmxItem.componentText; let y = index">
+        <div *ngFor="let testName of bmxItem.componentText; let y = index" >
 
             <div class="test-name-table">
 
@@ -445,8 +446,7 @@
 
 
 <!--📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱 TABLE 📱 MOBILE 📱 GENERATOR 📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱📱-->
-<div *ngIf="bmxItem.componentSettings[1].categoryTobeRender == '' || bmxItem.componentSettings[1].categoryTobeRender == bmxItem.componentSettings[0].categoryName "
-    class="mobile">
+<div class="mobile">
     <div style="display: flex;flex-direction: column;text-align: center;align-items: center;">
 
         <div style="font-size: 25px;color: #324395;padding-bottom: 10px;margin: 5px;">
@@ -462,10 +462,10 @@
     <div class="scroller-style main-container" style="margin-bottom: 45px;" [dragula]="draggableBag"
         [(dragulaModel)]="bmxItem.componentText" (dragulaModelChange)="checkDragEvetn($event);">
 
-        <div *ngFor="let testName of bmxItem.componentText; let y = index" style="margin-bottom: 10px;"
+        <div *ngFor="let testName of bmxItem.componentText; let y = index" style="margin-bottom: 10px;" (drag)="drag()"
             [ngClass]="(y == 0)?'ROW-CERO':''">
 
-            <div class="test-name-table" *ngIf="(y != 0)"
+            <div class="test-name-table" *ngIf="(y != 0)" (drag)="drag()"
                 [style.touch-action]="(this.bmxItem.componentSettings[0].rankType == 'dragAndDrop')?'none':''"
                 [style.height]="(selectedCard == y && this.bmxItem.componentSettings[0].rankType == 'radio')?'200px':(selectedCard == y)?'':'45px'">
 
