--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/narrow-down/narrow-down.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/narrow-down/narrow-down.component.html
@@ -134,6 +134,10 @@
             mat-icon-button aria-label="ranking">
             <mat-icon style="font-size: 26px;" class="full-icon">undo</mat-icon>
         </button>
+        <button (click)="setPronunciation()" class="add-column" matTooltip="speech" matTooltipPosition="above"
+            mat-icon-button aria-label="ranking">
+            <mat-icon style="font-size: 26px;" class="full-icon">mic</mat-icon>
+        </button>
     </div>
 </div>
 <!-- ➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗  END  ➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗ -->
@@ -343,21 +347,19 @@
 
 
                         <div *ngIf="selectedColumn === e && bmxClientPageOverview && !editSingleTableCells" style="display: flex;flex-direction: row;justify-content: space-around;
-                        position: absolute;top: 35px;background: white;border: #324395 dashed 1px;"  (mouseleave)="selectedColumn = ''">
-                            <span  class="header-delete-icon"
-                                matTooltip="double click to delete column" matTooltipPosition="above"
-                                (dblclick)="deleteColumn(columnName)">x</span>
-                            <mat-icon  style="cursor: pointer;"
-                                (click)="swapColumns(e)">chevron_right</mat-icon>
+                        position: absolute;top: 35px;background: white;border: #324395 dashed 1px;"
+                            (mouseleave)="selectedColumn = ''">
+                            <span class="header-delete-icon" matTooltip="double click to delete column"
+                                matTooltipPosition="above" (dblclick)="deleteColumn(columnName)">x</span>
+                            <mat-icon style="cursor: pointer;" (click)="swapColumns(e)">chevron_right</mat-icon>
 
-                            <mat-icon  style="cursor: pointer;"
-                                (click)="columnFontSizeAdjust(columnName, 'decrease')">remove</mat-icon>
+                            <mat-icon style="cursor: pointer;" (click)="columnFontSizeAdjust(columnName, 'decrease')">
+                                remove</mat-icon>
 
-                            <mat-icon 
-                                style="cursor: pointer;">text_format</mat-icon>
+                            <mat-icon style="cursor: pointer;">text_format</mat-icon>
 
-                            <mat-icon  style="cursor: pointer;"
-                                (click)="columnFontSizeAdjust(columnName, 'increase')">add</mat-icon>
+                            <mat-icon style="cursor: pointer;" (click)="columnFontSizeAdjust(columnName, 'increase')">
+                                add</mat-icon>
                         </div>
 
                     </div>
@@ -465,12 +467,23 @@
                             style="outline: none;text-align: center;" class="row-box"
                             [(ngModel)]="testName[columnName]"></textarea>
 
-                        <p *ngIf="y !== 0  && !editSingleTableCells && (columnName.includes('RadioColumn') != true) &&
-                         columnName.includes('Comments') != true &&  columnName.includes('RATE') != true"
-                            [style.font-size]="bmxItem.componentSettings[0].fontSize +'px'"
-                            [style.width]="(columnName == 'rationale')?bmxItem.componentSettings[0].rationalewidth + 'px':bmxItem.componentSettings[0].columnWidth +'px'"
-                            style="text-align: center;margin: 0 0 0px;"
-                            [innerHTML]="testName[columnName] | safe: 'html'">{{testName[columnName]}}</p>
+                            
+
+                            <div style="display: flex;">
+                                <mat-icon style="cursor: pointer;color: #324395;" (click)="playTestNameSound(testName[columnName])"
+                                    *ngIf="y !== 0  && !editSingleTableCells && (columnName.includes('nameCandidates') == true) && displaySound">
+                                    volume_up
+                                </mat-icon>
+                                <p *ngIf="y !== 0  && !editSingleTableCells && (columnName.includes('RadioColumn') != true) &&
+                                columnName.includes('Comments') != true &&  columnName.includes('RATE') != true"
+                                   [style.font-size]="bmxItem.componentSettings[0].fontSize +'px'"
+                                   [style.width]="(columnName == 'rationale')?bmxItem.componentSettings[0].rationalewidth + 'px':bmxItem.componentSettings[0].columnWidth +'px'"
+                                   style="text-align: center;margin: 0 0 0px;"
+                                   [innerHTML]="testName[columnName] | safe: 'html'">{{testName[columnName]}}</p>
+                            </div>
+
+
+                       
                     </div>
                     <!-- 🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡 END TABLE CELLS 🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡 -->
                 </div>
@@ -549,7 +562,7 @@
                 <div style="display: flex;flex-direction: row;align-items: center;">
                     <div *ngIf="(y !== 0)" [ngClass]="(selectedCard != y)?'noSelectedCard':'selectedCard'">
                         <input type="checkbox" [disabled]="false"
-                            style="position: absolute;left: 6px;margin: -40px 8px;"
+                            style="position: absolute;left: 6px;margin: -16px 8px;"
                             [checked]="this.bmxItem.componentText[y].SELECTED_ROW"
                             (change)="setRating($event,y);leaveStar(y);">
                     </div>
@@ -574,17 +587,26 @@
                                         rows="4" cols="50"></textarea>
                                 </div>
 
-                                <p (click)="(selectedCard == y)?selectedCard = '':selectedCard = y" *ngIf="y !== 0  && !editSingleTableCells && (columnName.includes('RadioColumn') != true) &&
-                                            columnName.includes('Comments') != true &&
-                                            columnName.includes('kata') != true &&
-                                            columnName.includes('ratio') != true"
-                                    [style.font-size]=" (columnName.includes('name') == true)?'27px':'20px'"
-                                    [style.color]="(columnName.includes('name') == true)?'#324395':'#bababa'"
-                                    style="text-align: center;padding: 10px 4px;">{{testName[columnName]}}</p>
-
+                                <div style="display: flex;align-items: center;justify-content: space-evenly;">
+                                    <mat-icon style="cursor: pointer;position: absolute;left: 48px;
+                                    margin-top: -10px;color: #324395;"
+                                        (click)="playTestNameSound(testName[columnName])" *ngIf="y !== 0  && !editSingleTableCells && (columnName.includes('nameCandidates') == true) &&
+                                             displaySound">
+                                        volume_up
+                                    </mat-icon>
+                                    <p (click)="(selectedCard == y)?selectedCard = '':selectedCard = y" *ngIf="y !== 0  && !editSingleTableCells && (columnName.includes('RadioColumn') != true) &&
+                                          columnName.includes('Comments') != true &&  columnName.includes('RATE') != true &&
+                                          columnName.includes('kata') != true &&
+                                          columnName.includes('ratio') != true"
+                                        [style.font-size]=" (columnName.includes('name') == true)?'27px':'20px'"
+                                        [style.color]="(columnName.includes('name') == true)?'#324395':'#bababa'"
+                                        style="text-align: center;padding: 10px 4px;">{{(testName[columnName])}}</p>
+                                </div>
+        
+        
                                 <p *ngIf="y !== 0  && !editSingleTableCells && (columnName.includes('RadioColumn') != true) &&
-                                            columnName.includes('Comments') != true && selectedCard == y &&
-                                            columnName.includes('name') != true &&  columnName.includes('RATE') != true"
+                                      columnName.includes('Comments') != true && selectedCard == y &&
+                                      columnName.includes('name') != true"
                                     [style.font-size]=" (columnName.includes('name') == true)?'27px':'20px'"
                                     [style.color]="(columnName.includes('name') == true)?'#324395':'#bababa'"
                                     style="text-align: center;padding: 5px 4px;"
